jQueryによるトランジションを実装完了

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 /* 全体レイアウト */
 *{
     box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body{
@@ -120,6 +121,7 @@ a{
     text-decoration: none;
     color: #484e4d;
 }
+
 
 /* ここからファーストビュー */
 
@@ -251,16 +253,26 @@ a{
 .ourstory_text{
     width: 50%;
     padding: 50px 70px;
+    position: relative;
+}
+
+.line_left{
+    width: 30vw;
+    height: 3px;
+    background: #000000;
+    margin-top: 10px;
+    position: absolute;
+    left: 5;
 }
 
 .ourstory_text h3{
     font-size: 30px;
     font-weight: bold;
     text-align: center;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
 }
 
-.ourstory_text h3::after{
+/* .ourstory_text h3::after{
     content: '';
     position: relative;
     top: -5px;
@@ -270,15 +282,30 @@ a{
     height: 3px;
     -webkit-transform: translateX(-50%);
     background-color: #484e4d;
-}
+} */
 
 .ourstory_text p{
     overflow-wrap: break-word;
     line-height: 1.8;
     letter-spacing: .03em;
+    margin-top: 30px;
 }
 
 .ourstory_image img{
+    width: 100%;
+}
+
+/* スライドショーのレイアウト */
+#slide{
+    width: 100%;
+}
+
+.slide_contents{
+    width: 90%;
+    margin: 0 auto;
+}
+
+.slide_contents--images img{
     width: 100%;
 }
 
@@ -300,14 +327,11 @@ a{
 
 .news_contents{
     margin: 60px 0;
-    display: flex;
-    width: 60%;
-    margin: 0 auto;
 }
 
 .news_contents--lists{
-    /* display: flex; */
-    /* justify-content: center; */
+    display: flex;
+    justify-content: center;
 }
 
 .news_contents--list{
@@ -356,10 +380,6 @@ a{
     margin-top: 30px;
 }
 
-.news_contents--images{
-    width: 100%;
-    background-color: #ffffff;
-}
 
 /* difference 国ごとの特徴レイアウト */
 
@@ -371,35 +391,47 @@ a{
     text-align: center;
 }
 
-.app_function--change{
+.app_function{
     display: flex;
-    justify-content: space-between;
-    width: 70%;
-    margin: 20px auto;
+}
+
+.app_function--change{
+    width: 20%;
+    padding: 0 30px;
+    text-align: center;
+}
+
+.app_function--change-items{
+    margin: 30px 0;
 }
 
 .app_function--change p{
     font-size: 20px;
     font-weight: bold;
     padding: 10px 10px;
-    border: solid 1px #808080;
-    background-color: #fafafa;
+    border: solid 1px #faebd7;
+    background-color: #faebd7;
+    border-radius: 25% 10%;
+    color: #000000;
 }
 .app_frame{
-    display: flex;
-    width: 80%;
-    margin: 0 auto;
+    /* display: flex; */
+    width: 30%;
     justify-content: space-between;
-    padding: 80px 50px;
     background-color: #fafafa;
 }
 
 .product_image{
-    width: 45%;
+    width: 100%;
+}
+
+.product_image img{
+    width: 100%;
+    margin-top: 10px;
 }
 
 .product_text{
-    width: 45%;
+    margin: 20px 20px;
 }
 
 .product_info h1{
@@ -409,9 +441,19 @@ a{
     margin-bottom: 30px;
 }
 
+.earth_box{
+    width: 50%;
+    background-color: #fafafa;
+}
+
+.earth_shape{
+    margin-left: 90px;
+}
+
 /* ここからコンタクト */
 
 #contact{
+    margin-top: 30px;
     padding-top: 30px;
     padding-bottom: 140px;
     background-color: #fafafa;
